--- a/SpaceObjectsApi.IntegrationTests/SpaceChecker.IntegrationTests.csproj
+++ b/SpaceObjectsApi.IntegrationTests/SpaceChecker.IntegrationTests.csproj
@@ -7,20 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AutoFixture" Version="4.17.0" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.9">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.4" />
-    <PackageReference Include="Moq" Version="4.16.1" />
     <PackageReference Include="NUnit" Version="3.13.1" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.17.0" />
     <PackageReference Include="coverlet.collector" Version="3.0.2" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\SpaceObjectsApi\SpaceObjectsApi\SpaceObjectsApi.csproj" />
+    <ProjectReference Include="..\SpaceObjectsApi\SpaceObjectsApi\SpaceChecker.csproj" />
   </ItemGroup>
 
 </Project>
