--- a/SpaceObjectsApi/SpaceObjectsApi/appsettings.json
+++ b/SpaceObjectsApi/SpaceObjectsApi/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=postgres;Username=postgres;Password=123123123aZ"
+    "DefaultConnection": ""
   }
 }
